[project]
name = "test-plan"
version = "1.0.0"
description = "Claude Code skills for generating test plans and test cases"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "pymarkdownlnt",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
extend-select = ["E501"]
external = ["UFN001"]

[tool.ruff.lint.per-file-ignores]
"tests/unit/test_ui_verify_helpers.py" = ["E402"]
